cppcheck/214358_report.txt
mspack.c:2:29: style: The scope of the variable 'frame_end' can be reduced. [variableScope]
  unsigned int frame_start, frame_end, window_posn, match_offset, range;
                            ^
mspack.c:3:43: style: Variable 'runsrc' can be declared as pointer to const [constVariablePointer]
  unsigned char *window, *i_ptr, *i_end, *runsrc, *rundest;
                                          ^
mspack.c:130:11: error: Uninitialized variable: bits_left [uninitvar]
      if (bits_left & 7) QTM_REMOVE_BITS(bits_left & 7);
          ^
mspack.c:124:39: note: Assuming condition is false
      if ((window_posn - frame_start) != QTM_FRAME_SIZE) {
                                      ^
mspack.c:130:11: note: Uninitialized variable: bits_left
      if (bits_left & 7) QTM_REMOVE_BITS(bits_left & 7);
          ^
mspack.c:2:67: style: Unused variable: range [unusedVariable]
  unsigned int frame_start, frame_end, window_posn, match_offset, range;
                                                                  ^
mspack.c:3:27: style: Unused variable: i_ptr [unusedVariable]
  unsigned char *window, *i_ptr, *i_end, *runsrc, *rundest;
                          ^
mspack.c:3:35: style: Unused variable: i_end [unusedVariable]
  unsigned char *window, *i_ptr, *i_end, *runsrc, *rundest;
                                  ^
mspack.c:5:27: style: Unused variable: symf [unusedVariable]
  unsigned short H, L, C, symf;
                          ^
mspack.c:7:25: style: Unused variable: bit_buffer [unusedVariable]
  register unsigned int bit_buffer;
                        ^
mspack.c:9:17: style: Unused variable: bits_needed [unusedVariable]
  unsigned char bits_needed, bit_run;
                ^
mspack.c:9:30: style: Unused variable: bit_run [unusedVariable]
  unsigned char bits_needed, bit_run;
                             ^
mspack.c:1:0: style: The function 'qtm_decompress' is never used. [unusedFunction]
int qtm_decompress(struct qtm_stream *qtm, off_t out_bytes) {
^
